# nanoprompt

./: LICENSE  README.md  config.html  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: config.css  config.js  main.js  style.css  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
