[package]
name = "nanoprompt"
version = "0.4.1"
description = "A minimal terminal emulator"
authors = ["Ideademic"]
edition = "2024"

[lib]
name = "nanoprompt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
